--- a/price_tracker/.env
+++ b/price_tracker/.env
@@ -1,2 +1,3 @@
 BRIGHT_DATA_USERNAME = brd-customer-hl_41b2ad47-zone-unblocker
 BRIGHT_DATA_PASSWORD = j3fj5kz391ph
+MONGODB_URI = mongodb+srv://dungnguyen2025:Tom0984817766.@cluster0.rl1dxvy.mongodb.net/?retryWrites=true&w=majority
